--- a/frontend/templates/recipes/index.html.jinja
+++ b/frontend/templates/recipes/index.html.jinja
@@ -1,6 +1,6 @@
 {% extends "_layout.html" %}
 {% set metatitle = "Recipes" %}
-{% set metadescription = "Recipes by Nicolas Bouliane" %}
+{% set metadescription = "Recipes by Emir Baycan" %}
 {% set canonicalUrl = "/recipes" %}
 
 {% block content %}
