--- a/frontend/templates/_layout.html
+++ b/frontend/templates/_layout.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
     <meta charset="utf-8" />
-    <title>{% if metatitle|default %}{{ metatitle }} - {% endif %}Nicolas Bouliane</title>
+    <title>{% if metatitle|default %}{{ metatitle }} - {% endif %}Emir Baycan</title>
     {% if metadescription|default %}<meta name="description" content="{{ metadescription }}">{% endif %}
     {% if canonicalUrl|default %}<link rel="canonical" href="{{ site_url }}{{ canonicalUrl }}">{% endif %}
     <link rel="home" href="https://nicolasbouliane.com" />
     <link rel="icon" type="image/png" href="/img/favicon.png">
-    <link rel="alternate" type="application/rss+xml" title="Nicolas Bouliane's latest posts" href="{{ site_url }}/blog/feed.rss">
-    <link rel="alternate" type="application/rss+xml" title="Nicolas Bouliane's latest projects" href="{{ site_url }}/projects/feed.rss">
-    <link rel="alternate" type="application/rss+xml" title="Nicolas Bouliane's latest recipes" href="{{ site_url }}/recipes/feed.rss">
+    <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest posts" href="{{ site_url }}/blog/feed.rss">
+    <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest projects" href="{{ site_url }}/projects/feed.rss">
+    <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest recipes" href="{{ site_url }}/recipes/feed.rss">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block postHead %}
     {% endblock %}
