--- a/frontend/templates/blog/index.html.jinja
+++ b/frontend/templates/blog/index.html.jinja
@@ -1,6 +1,6 @@
 {% extends "_layout.html" %}
 {% set metatitle = "Blog" %}
-{% set metadescription = "Posts by Nicolas Bouliane" %}
+{% set metadescription = "Posts by Emir Baycan" %}
 {% set canonicalUrl = "/blog" %}
 
 {% block content %}
@@ -21,7 +21,9 @@
     <ul class="entry-list">
         {% for entry in get_entries('blog', filter_by=is_not_golden, sort_by='date_created', reverse=True) %}
             <li>
-                <time datetime="{{ entry.date_created.strftime('%F') }}">{{ entry.date_created.strftime('%-b %Y') }}</time>
+                <time datetime="{{ entry.date_created.strftime('%F') }}">
+                    {{ entry.date_created.strftime('%b') }} {{ entry.date_created.strftime('%Y') }}
+                </time>
                 <h3><a rel="bookmark" href="{{ entry.url }}">{{ entry.title }}</a></h3>
                 <p>{{ entry.description }}</p>
             </li>
