--- a/frontend/templates/entry.html.jinja
+++ b/frontend/templates/entry.html.jinja
@@ -3,7 +3,7 @@
 
 {% block content %}
     <header>
-        <h1>Nicolas Bouliane</h1>
+        <h1>Emir Baycan</h1>
         <small>[nee · ko · lah &ndash; boo · lee · ann]</small>
     </header>
     {{ entry.body }}
