--- a/frontend/templates/projects/feed.rss.jinja
+++ b/frontend/templates/projects/feed.rss.jinja
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
     <channel>
-        <title>Nicolas Bouliane's projects</title>
+        <title>Emir Baycan's projects</title>
         <link>{{ site_url }}/projects</link>
         <atom:link href="{{ site_url }}/projects/feed.rss" rel="self" type="application/rss+xml" />
-        <description>Nicolas Bouliane's most recent projects</description>
+        <description>Emir Baycan's most recent projects</description>
         <language>en</language>
         <pubDate>{{ now.strftime("%a, %d %b %Y %H:%M:%S") }} +0100</pubDate>
         <lastBuildDate>{{ now.strftime("%a, %d %b %Y %H:%M:%S") }} +0100</lastBuildDate>
@@ -14,7 +14,7 @@
                 <title>{{ entry.title }}</title>
                 <link>{{ entry.url }}</link>
                 <pubDate>{{ entry.date_created.strftime("%a, %d %b %Y %H:%M:%S") }} +0100</pubDate>
-                <author>contact@nicolasbouliane.com (Nicolas Bouliane)</author>
+                <author>emir-baycan@hotmail.com (Emir Baycan)</author>
                 <guid>{{ entry.url }}</guid>
                 <description>
                     <![CDATA[{{ entry.body }}]]>
