--- a/frontend/templates/blog/index.html.jinja
+++ b/frontend/templates/blog/index.html.jinja
@@ -9,7 +9,7 @@
     </header>
     <h2>Highlights</h2>
     <ul class="entry-list">
-        {% for entry in get_entries('blog', filter_by=is_golden, sort_by='date_created', reverse=True) %}
+        {% for entry in get_entries(namespaces='blog', filter_by=is_golden, sort_by='date_created', reverse=True) %}
             <li>
                 <time datetime="{{ entry.date_created.strftime('%F') }}">{{ entry.date_created.strftime('%Y') }}</time>
                 <h3><a rel="bookmark" href="{{ entry.url }}">{{ entry.title }}</a></h3>
@@ -19,7 +19,7 @@
     </ul>
     <h2>Everything else</h2>
     <ul class="entry-list">
-        {% for entry in get_entries('blog', filter_by=is_not_golden, sort_by='date_created', reverse=True) %}
+        {% for entry in get_entries(namespaces='blog', filter_by=is_not_golden, sort_by='date_created', reverse=True) %}
             <li>
                 <time datetime="{{ entry.date_created.strftime('%F') }}">
                     {{ entry.date_created.strftime('%b') }} {{ entry.date_created.strftime('%Y') }}
