--- a/frontend/templates/entry.html.jinja
+++ b/frontend/templates/entry.html.jinja
@@ -1,10 +1,10 @@
 {% extends "_layout.html" %}
-{% set metadescription = "I'm a former software engineer in big, beautiful Berlin" %}
+{% set metadescription = "I'm a software engineer" %}
 
 {% block content %}
     <header>
         <h1>Emir Baycan</h1>
-        <small>[nee · ko · lah &ndash; boo · lee · ann]</small>
+        <small>[e · mir &ndash; bay · can]</small>
     </header>
     {{ entry.body }}
 {% endblock %}
