--- a/frontend/templates/_layout.html
+++ b/frontend/templates/_layout.html
@@ -5,7 +5,7 @@
     <title>{% if metatitle|default %}{{ metatitle }} - {% endif %}Emir Baycan</title>
     {% if metadescription|default %}<meta name="description" content="{{ metadescription }}">{% endif %}
     {% if canonicalUrl|default %}<link rel="canonical" href="{{ site_url }}{{ canonicalUrl }}">{% endif %}
-    <link rel="home" href="https://nicolasbouliane.com" />
+    <link rel="home" href="https://blog.emirbaycan.com.tr" />
     <link rel="icon" type="image/png" href="/img/favicon.png">
     <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest posts" href="{{ site_url }}/blog/feed.rss">
     <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest projects" href="{{ site_url }}/projects/feed.rss">
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <a href="/">N<span class="no-mobile">icolas </span>B<span class="no-mobile">ouliane</span></a>
+        <a href="/">E<span class="no-mobile">mir </span>Bay<span class="no-mobile">can</span></a>
         <nav aria-label="Main navigation">
             <ul>
                 <li><a href="/blog">Blog</a></li>
