url route, css fixes

--- a/frontend/templates/_layout.html
+++ b/frontend/templates/_layout.html
@@ -24,8 +24,7 @@
         <a href="/">E<span class="no-mobile">mir </span>Bay<span class="no-mobile">can</span></a>
         <nav aria-label="Main navigation">
             <ul>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/projects">Projects</a></li>
+                <li><a href="/blog/">Blog</a></li>
             </ul>
         </nav>
     </header>
