--- a/frontend/templates/_layout.html
+++ b/frontend/templates/_layout.html
@@ -6,7 +6,7 @@
     {% if metadescription|default %}<meta name="description" content="{{ metadescription }}">{% endif %}
     {% if canonicalUrl|default %}<link rel="canonical" href="{{ site_url }}{{ canonicalUrl }}">{% endif %}
     <link rel="home" href="https://blog.emirbaycan.com.tr" />
-    <link rel="icon" type="image/png" href="/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest posts" href="{{ site_url }}/blog/feed.rss">
     <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest projects" href="{{ site_url }}/projects/feed.rss">
     <link rel="alternate" type="application/rss+xml" title="Emir Baycan's latest recipes" href="{{ site_url }}/recipes/feed.rss">
